k8s/front-end-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end-app
  template:
    metadata:
      labels:
        app: front-end-app
    spec:
      containers:
        - name: front-end-app
          image: "whinynil/front-end-app:1.0.3"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
spec:
  selector:
    app: front-end-app
  ports:
    - protocol: TCP
      name: main-port
      port: 8080
      targetPort: 8080
