k8s/mailhog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: "mailhog/mailhog:latest"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"

          ports:
            - containerPort: 1025
            - containerPort: 8025

---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  selector:
    app: mailhog
  ports:
    - protocol: TCP
      name: smtp-port
      port: 1025
      targetPort: 1025
    - protocol: TCP
      name: webui-port
      port: 8025
      targetPort: 8025
